--- a/public/index.html
+++ b/public/index.html
@@ -3,37 +3,43 @@
 <html>
 
 	<head>
-		<title>Clementine.js - The elegant and lightweight full stack JavaScript boilerplate.</title>
+		<title>fcc-books-app</title>
 
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<header>
-		<p>Welcome, <span id="display-name"></span>!</p>
-		<a class="menu" href="/profile">Profile</a>
-		<p>|</p>
-		<a class="menu" href="/logout">Logout</a>
+		<p>Welcome, <span id="display-name">guest</span>!</p>
+		<a hidden class="menu auth-shown" href="/profile">Profile</a>
+		<p hidden class="auth-shown">|</p>
+		<a hidden class="menu auth-shown" href="/logout">Logout</a>
+		<a class="menu auth-hidden" href="/login">Login</a>
 	</header>
 
 	<body>
 		<div class="container">
-			<img src="/public/img/clementine_150.png" />
-			<br />
-			<p class="clementine-text">Clementine.js</p>
+			<p class="clementine-text">fcc-books-app</p>
 		</div>
 
+    <div hidden class="auth-shown">
+      <h2>Add a Book</h2>
+      <form method="post" action="/api/books" id="add-book">
+        <label>
+          ISBN
+          <input type="text" name="isbn" pattern="(97[89]-?)?([0-9X]-?){10}">
+        </label>
+        <input type="submit" value="Add">
+      </form>
+    </div>
+
 		<div class="container">
-			<p>You have clicked the button <span id="click-nbr"></span> times.</p>
-			<br />
-			<div class="btn-container">
-				<button type="submit" class="btn btn-add">CLICK ME!</button>
-				<button class="btn btn-delete">RESET</button>
-			</div>
+			<h2>Books</h2>
+      <ul id="books-list"></ul>
 		</div>
 
 		<script type="text/javascript" src="common/ajax-functions.js"></script>
-		<script type="text/javascript" src="controllers/click-controller.client.js"></script>
 		<script type="text/javascript" src="controllers/user-controller.client.js"></script>
+		<script type="text/javascript" src="controllers/books-controller.client.js"></script>
 	</body>
 
 </html>
